# CG-RayTracing

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  geometry.cpp  geometry.h  main.cpp  model.cpp  model.h  objects.h  properties.h  render.cpp  render.h  rt
src/: Bitmap.cpp  geometry.cpp  geometry.h  main.cpp  model.cpp  model.h  objects.h  properties.h  render.cpp
